--- a/src/main/resources/public/style.css
+++ b/src/main/resources/public/style.css
@@ -80,3 +80,42 @@ caption {
     caption-side: top;
     text-align: left;
 }
+
+.table-image {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+}
+
+.modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-image-content {
+    margin: auto;
+    display: block;
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.modal-embed-content {
+    width: 100%; /* Ensures the embed element fills the modal */
+    height: 100%; /* Ensures it uses the available height */
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
